# angie-panel

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.rus.md  SECURITY.md
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml  release.yml
backend/: Cargo.toml
backend/apctl/: Cargo.toml
backend/apctl/src/: lib.rs  main.rs
backend/data/: geoip-countries.csv
backend/migrations/: 0001_init.sql  0002_hosts.sql  0003_access_lists.sql  0004_redirect_dead_hosts.sql  0005_streams.sql  0006_rate_limits.sql  0007_upstreams.sql  0008_http3.sql  0009_user_roles.sql  0010_bans.sql  0011_mtls.sql  0012_stream_tls.sql  0013_forward_auth.sql  0014_custom_headers.sql  0015_maintenance.sql  0016_gzip.sql  0017_audit_log.sql  0018_error_pages.sql  0019_sni_routers.sql  0020_cert_dns_provider.sql  0021_dns_credentials.sql  0022_proxy_tuning.sql  0023_reset_orphan_cert_dns_provider.sql  0024_force_ssl_backfill.sql  0025_health_checks.sql  0026_api_tokens.sql
backend/src/: access_lists.rs  acme_hook.rs  api.rs  apply_api.rs  assets.rs  audit.rs  auth.rs  bans.rs  certs.rs  config.rs  ctl.rs  dashboard.rs  db.rs  dns_providers.rs  error.rs  export_import.rs  geo.rs  health.rs  helper.rs  hosts.rs  integration_tests.rs  main.rs  model.rs  other_hosts.rs  reconcile.rs  regru.rs  repo.rs  secretbox.rs  security.rs  settings.rs  sni_routers.rs  state.rs  streams.rs  system.rs  systemd.rs  tokens.rs  users.rs
backend/src/apply/: atomic.rs  diff.rs  header.rs  manifest.rs  mod.rs  pipeline.rs  report.rs  runner.rs  stage.rs  testutil.rs
backend/src/generator/: lint.rs  mod.rs  tests.rs
backend/src/generator/lint/: tests.rs
backend/tests/golden/: 00-panel.conf  03-bans.conf  05-default-drop444.conf  05-default-html.conf  05-default-ipv6.conf  05-default-notfound.conf  05-default-redirect.conf  10-acme-clients.conf  10-acme-hook.conf  10-acme.conf  12-geo-deny.conf  15-rate-limits.conf  20-host-access-list.conf  20-host-advanced-snippet.conf  20-host-custom-headers.conf  20-host-custom-locations.conf  20-host-error-pages.conf  20-host-forward-auth.conf  20-host-gzip.conf  20-host-http3.conf  20-host-https-no-force-ssl.conf  20-host-https.conf  20-host-load-balanced.conf  20-host-maintenance.conf  20-host-mtls.conf  20-host-plain-http.conf  20-host-proxy-tuning.conf  20-host-rate-limited.conf  20-host-ws-hsts-exploits.conf  30-redirect-http.conf  30-redirect-https.conf  40-dead-https.conf  access-5.htpasswd  stream-1-tcp.conf  stream-1-tls.conf  stream-2-udp.conf  stream-3-tcp-udp.conf  stream-sni-1.conf
dev/: angie-panel.toml
docs/: certificates.md  cli.md  deploy-nanopi.md  installation.md  security.md  troubleshooting.md
docs/research/: 01-research.md  02-plan-critique.md
e2e/: README.md  docker-compose.yml  run.sh
e2e/angie/: Dockerfile  angie.conf  host-https.conf
e2e/angie/http.d/: 10-acme.conf  20-host.conf  90-harness.conf
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: brand-mark.tsx  certificate-status.tsx  chips-field.tsx  default-site-picker.tsx  domain-badges.tsx  login-form.test.tsx  login-form.tsx  preference-menus.tsx  router-fallbacks.tsx
frontend/src/components/hosts/: host-editor-dialog.tsx  host-editor-fields.tsx  host-editor.test.tsx  uptime-bar.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/routing/: route-cable.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toaster.tsx  tooltip.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/i18n/: en.ts  index.ts  parity.test.ts  ru.ts
frontend/src/lib/: api.test.ts  api.ts  countries.ts  domain.ts  ip.test.ts  ip.ts  query-client.test.ts  query-client.ts  toast.ts  use-dirty.ts  use-me.ts
frontend/src/pages/: access-lists.test.tsx  access-lists.tsx  apply.test.tsx  apply.tsx  audit.test.tsx  audit.tsx  blocklist.test.tsx  blocklist.tsx  certificates.test.tsx  certificates.tsx  dashboard.test.tsx  dashboard.tsx  dead-hosts.test.tsx  dead-hosts.tsx  dns-providers.test.tsx  dns-providers.tsx  hosts.test.tsx  hosts.tsx  login.tsx  placeholder.tsx  redirect-hosts.test.tsx  redirect-hosts.tsx  settings.tsx  setup.tsx  sni-routers.test.tsx  sni-routers.tsx  streams.test.tsx  streams.tsx  tokens.test.tsx  tokens.tsx  users.test.tsx  users.tsx
frontend/src/test/: setup.ts
frontend/src/theme/: theme-context.ts  theme-provider.tsx
packaging/: README.md  angie-panel.toml  install.sh
packaging/debian/: postinst  postrm  prerm
packaging/homebrew/: apctl.rb.tmpl
packaging/polkit/: 10-angie-panel.rules
packaging/snippets/: block-exploits.conf  cache-assets.conf
packaging/systemd/: angie-panel-apply.service  angie-panel-configtest.service  angie-panel-enable-streams.service  angie-panel.service
packaging/tmpfiles/: angie-panel.conf
scripts/: build-geoip-data.sh  vendor-acme-dnsapi.sh
site/: index.html  styles.css
